// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nav bar should match snapshot (authenticated) 1`] = `
<div
  className="c-ui__nav-bar"
>
  <h3
    className="c-ui__nav-item qa-nav-all u-hover"
    key="0-313"
    onClick={[Function]}
  >
    All Polls
  </h3>
  <h3
    className="c-ui__nav-item qa-nav-created u-hover"
    key="0-728"
    onClick={[Function]}
  >
    My Polls
  </h3>
  <h3
    className="c-ui__nav-item qa-nav-voted u-hover"
    key="0-546"
    onClick={[Function]}
  >
    Voted
  </h3>
  <h3
    className="c-ui__nav-item qa-nav-hidden u-hover"
    key="0-620"
    onClick={[Function]}
  >
    Hidden
  </h3>
  <h3
    className="c-ui__nav-item qa-nav-form u-hover"
    key="0-436"
    onClick={[Function]}
  >
    New Poll
  </h3>
</div>
`;

exports[`nav bar should match snapshot (default) 1`] = `
<div
  className="c-ui__nav-bar"
>
  <h3
    className="c-ui__nav-item qa-nav-all u-hover"
    key="0-313"
    onClick={[Function]}
  >
    All Polls
  </h3>
  <h3
    className="c-ui__nav-item qa-nav-voted u-hover"
    key="0-546"
    onClick={[Function]}
  >
    Voted
  </h3>
  <h3
    className="c-ui__nav-item qa-nav-hidden u-hover"
    key="0-620"
    onClick={[Function]}
  >
    Hidden
  </h3>
</div>
`;
